--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+* {
+  box-sizing: border-box;
+}
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main h2 {
+  text-align: center;
+}
+.main .box {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.left,
+.right {
+  width: 500px;
+  height: 300px;
+  border: 2px solid rgb(95, 133, 255);
+  background-color: rgb(205, 217, 255);
+  border-radius: 10px;
+  box-shadow: 1px 1px 7px 3px rgb(106, 141, 255);
+  padding: 1rem 3rem;
+}
+
+h3 {
+  text-align: center;
+}
+
+.left {
+  text-align: center;
+}
+
+.left input {
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #ddd;
+  font-size: 20px;
+  line-height: 24px;
+  width: 100%;
+  padding: 0.5rem 0.3rem;
+}
+
+.left button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  margin-top: 6rem;
+  border-radius: 10px;
+  background-color: #fff;
+  color: rgb(0, 60, 255);
+  padding: 0.8rem 1.2rem;
+}
+
+.left button:hover {
+  box-shadow: 1px 1px 8px 2px rgb(106, 141, 255);
+}
+
+.right {
+  overflow: hidden;
+}
+
+.right .content {
+  background-color: #fff;
+  padding: 0 0.5rem;
+  height: 160px;
+  overflow: auto;
 }
